Small design change
Param "gal" renamed to "gallery" ; soon permalink will be implemented
(work 60%)
Small design change for links

--- a/style.css
+++ b/style.css
@@ -39,7 +39,10 @@ body {
 }
 .path a:last-of-type {
 	color: #fff;
-	text-decoration: underline;
+}
+.path a:hover {
+	color: #fff;
+	text-decoration: none;
 }
 
 /*
