--- a/style.css
+++ b/style.css
@@ -82,10 +82,13 @@ body {
  * Footer
  */
 .footer {
-	margin: 30px 0;
+	margin: 15px 0;
 	font-size: 0.9em;
 	text-align: center;
 	color: #333;
+}
+.footer span.white {
+	color: #777;
 }
 .footer a {
 	color: inherit;
